--- a/src/fonts.css
+++ b/src/fonts.css
@@ -48,7 +48,7 @@
     font-style: normal;
   }
   @font-face {
-    font-family: 'NeueMontrealRegular';
+    font-family: 'NeueMontreal-Regular';
     src: url('./fonts/NeueMontreal-Regular.woff2') format('woff2');
         
     font-weight: normal;
