--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,10 +1,4 @@
 /* src/fonts.css */
-@font-face {
-    font-family: 'HelveticaNeue',;
-    src: url('../fonts/HelveticaNeue-01.woff') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
   @font-face {
     font-family: 'FoundersGrotesk';
     src: url('../fonts/FoundersGrotesk-Bold.woff2') format('woff2');
@@ -49,7 +43,7 @@
   }
   @font-face {
     font-family: 'NeueMontreal-Regular';
-    src: url('./fonts/NeueMontreal-Regular.woff2') format('woff2');
+    src: url('/vite-project/public/fonts/NeueMontreal-Regular.woff2') format('woff2');
         
     font-weight: normal;
     font-style: normal;
